# compiler

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Lab3.cpp
include/: compiler.h  lexer.h  mips.h  parser.h  symbol_table.h
src/: ast.h  compiler.cpp  lexer.cpp  lexer.h  main.cpp  mips.cpp  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h  token.cpp  token.h
test/: testfile1.txt  testfile10.txt  testfile11.txt  testfile12.txt  testfile13.txt  testfile15.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt
